[workspace]
resolver = "2"

members = [
    "tools/tx_transfer",
]

[package]
version = "0.1.0"
name = "goat_prover"
edition = "2021"

[dependencies]
bincode = "1.3.3"
anyhow = "1.0.75"
ethers = "2.0.14"
indicatif = "0.17.8"
ethers-providers = { version = "2.0", features = ["ws"] }
ethers-core = { version = "2.0" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
sha2 = { version = "0.10.8", default-features = false }
revm = { git = "https://github.com/bluealloy/revm", branch = "main", default-features = false, features = [ "serde", "ethersdb", "serde-json", "std", "optional_no_base_fee" ] }
models = { git = "https://github.com/zkMIPS/revme", branch = "feat/goat" }
executor = { git = "https://github.com/zkMIPS/revme", branch = "feat/goat" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkm-project-template", branch = "main", features = ["snark"] }
common = { git = "https://github.com/zkMIPS/zkm-prover", branch = "main", default-features = false } 
hex = "0.4.3"
alloy-rlp = { version = "0.3.7", default-features = false, features = [
    "arrayvec",
    "derive",
] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
triehash = "0.8"
plain_hasher = "0.2"
hash-db = "0.15"
log = "0.4.0"
env_logger = "0.10"
k256 = { version = "0.13.3", features = ["ecdsa"], default-features = false }


[patch."https://github.com/zkMIPS/revme"]
models = {path="../../zkMIPS/revme/models"}
executor = {path="../../zkMIPS/revme/executor"}

[patch."https://github.com/zkMIPS/zkm-project-template"]
zkm-sdk = {path="../zkm-project-template/sdk"}