[package]
version = "0.1.0"
name = "tx_transfer"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
toml = "0.7"
anyhow = "1.0.93"
async-trait = "0.1.71"
celestia-proto = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb" }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb", default-features = false }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb", default-features = false }
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574", default-features = false }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574" }
base64 = "0.21.2"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types", "http-client"] }
serde_json = "1.0.133"
